@@ -1,18 +1,5 @@
 package ua.com.fielden.platform.eql.stage1.sources;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.emptyMap;
-import static java.util.stream.Collectors.toList;
-
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-
 import ua.com.fielden.platform.eql.exceptions.EqlStage1ProcessingException;
 import ua.com.fielden.platform.eql.meta.PropType;
 import ua.com.fielden.platform.eql.stage2.conditions.Conditions2;
@@ -20,31 +7,45 @@ import ua.com.fielden.platform.eql.stage2.conditions.NullPredicate2;
 import ua.com.fielden.platform.eql.stage2.operands.AbstractSingleOperand2;
 import ua.com.fielden.platform.eql.stage2.queries.SourceQuery2;
 import ua.com.fielden.platform.eql.stage2.sundries.Yield2;
+import ua.com.fielden.platform.utils.CollectionUtil;
+
+import java.util.*;
+import java.util.Map.Entry;
+
+import static java.util.Arrays.asList;
+import static java.util.stream.Collectors.*;
+import static ua.com.fielden.platform.eql.meta.PropType.NULL_TYPE;
 
 public class YieldInfoNodesGenerator {
 
     private YieldInfoNodesGenerator() {}
 
+    /**
+     * Processes yields of given source queries.
+     * The number of returned yield nodes is equal to the number of yields in each model (all of which must be equal).
+     *
+     * @param models  sources of yields; must form a rectangular shape: all models must have the same number of yields
+     *                sharing the same set of aliases used, otherwise an exception is thrown
+     */
     public static Collection<YieldInfoNode> generate(final List<SourceQuery2> models) {
-        final List<YieldInfoTail> yieldsInfo = new ArrayList<>();
-        for (final YieldInfo yield : generateYieldInfos(models)) {
-            yieldsInfo.add(new YieldInfoTail(asList(yield.name().split("\\.")), yield.propType(), yield.nonnullable()));
-        }
+        final List<YieldInfoTail> yieldsInfo = generateYieldInfos(models).stream()
+                .map(yield -> new YieldInfoTail(asList(yield.name().split("\\.")), yield.propType(), yield.nonnullable()))
+                .toList();
 
         return group(yieldsInfo).values();
     }
 
     private static List<YieldInfo> generateYieldInfos(final List<SourceQuery2> models) {
         if (models.size() == 1) {
-            return models.get(0).yields.getYields().stream().map(yield -> new YieldInfo(yield.alias, yield.operand.type(), determineNonnullability(new YieldAndConditions(yield, models.get(0).whereConditions)))).collect(toList());
+            return models.getFirst().yields.getYields().stream()
+                    .map(yield -> new YieldInfo(yield.alias, yield.operand.type(), determineNonnullability(new YieldAndConditions(yield, models.getFirst().whereConditions))))
+                    .toList();
         } else {
-            final List<YieldInfo> result = new ArrayList<>();
-            final Map<String, List<YieldAndConditions>> yieldMatrix = generateYieldMatrixFromQueryModels(models);
+            final Map<String, List<YieldAndConditions>> yieldMatrix = generateYieldsMatrix(models);
             validateYieldsMatrix(yieldMatrix, models.size());
-            for (final Entry<String, List<YieldAndConditions>> yieldEntry : yieldMatrix.entrySet()) {
-                result.add(new YieldInfo(yieldEntry.getKey(), determinePropType(yieldEntry.getValue()), determineNonnullability(yieldEntry.getValue())));
-            }
-            return result;
+            return yieldMatrix.entrySet().stream()
+                    .map(yieldEntry -> new YieldInfo(yieldEntry.getKey(), determinePropType(yieldEntry.getValue()), determineNonnullability(yieldEntry.getValue())))
+                    .toList();
         }
     }
 
@@ -62,37 +63,18 @@ public class YieldInfoNodesGenerator {
     }
 
     private static PropType determinePropType(final List<YieldAndConditions> yieldVariants) {
-        final Set<PropType> propTypes = new HashSet<>();
-        for (final YieldAndConditions yieldVariant : yieldVariants) {
-            if (yieldVariant.yield.operand.type() != null) {
-                propTypes.add(yieldVariant.yield.operand.type());
-            }
-        }
+        final Set<PropType> propTypes = yieldVariants.stream()
+                .map(yv -> yv.yield.operand.type())
+                .filter(PropType::isNotNull)
+                .collect(toSet());
 
-        if (propTypes.isEmpty()) {
-            return null;
-        } else if (propTypes.size() == 1) {
-            return propTypes.iterator().next();
-        } else {
-            return AbstractSingleOperand2.getTypeHighestPrecedence(propTypes);
-        }
+        return propTypes.isEmpty() ? NULL_TYPE : AbstractSingleOperand2.getTypeHighestPrecedence(propTypes);
     }
 
-    private static Map<String, List<YieldAndConditions>> generateYieldMatrixFromQueryModels(final List<SourceQuery2> models) {
-        final Map<String, List<YieldAndConditions>> yieldsMatrix = new HashMap<>();
-        for (final SourceQuery2 entQuery : models) {
-            for (final Yield2 yield : entQuery.yields.getYields()) {
-                final List<YieldAndConditions> foundYields = yieldsMatrix.get(yield.alias);
-                if (foundYields != null) {
-                    foundYields.add(new YieldAndConditions(yield, entQuery.whereConditions));
-                } else {
-                    final List<YieldAndConditions> newList = new ArrayList<>();
-                    newList.add(new YieldAndConditions(yield, entQuery.whereConditions));
-                    yieldsMatrix.put(yield.alias, newList);
-                }
-            }
-        }
-        return yieldsMatrix;
+    private static Map<String, List<YieldAndConditions>> generateYieldsMatrix(final List<SourceQuery2> models) {
+        return models.stream()
+                .flatMap(m -> m.yields.getYields().stream().map(y -> new YieldAndConditions(y, m.whereConditions)))
+                .collect(groupingBy(yac -> yac.yield.alias));
     }
 
     private static void validateYieldsMatrix(final Map<String, List<YieldAndConditions>> yieldMatrix, final int modelsCount) {
@@ -103,40 +85,40 @@ public class YieldInfoNodesGenerator {
         }
     }
 
-    private static Map<String, YieldInfoNode> group(final List<YieldInfoTail> yieldsData) {
-        final Map<String, List<YieldInfoTail>> yieldsTreeData = new HashMap<>(); // tails starting from the same common part but already without it
-        final Map<String, YieldInfo> yieldsWithoutSubprops = new HashMap<>();
+    private static Map<String, YieldInfoNode> group(final List<YieldInfoTail> yields) {
+        return CollectionUtil.mapValues(yields.stream().collect(groupingBy(YieldInfoTail::firstName, mapping(YieldInfoTail::rest, toList()))),
+                // each tail's name starts after firstName; or is empty if it's a simple yield
+                (firstName, tails) -> {
+                    final Optional<YieldInfo> optSimpleYield = tails.stream().filter(YieldInfoTail::isEmpty).findFirst()
+                            .map(tail -> new YieldInfo(firstName, tail.propType, tail.nonnullable));
+                    final List<YieldInfoTail> nonEmptyTails = tails.stream().filter(tail -> !tail.isEmpty()).toList();
 
-        for (final YieldInfoTail yieldData : yieldsData) {
-            final String first = yieldData.name.get(0);
-
-            List<YieldInfoTail> existing = yieldsTreeData.get(first);
-
-            if (existing == null) {
-                existing = new ArrayList<>();
-                yieldsTreeData.put(first, existing);
-            }
-
-            if (yieldData.name.size() == 1) {
-                yieldsWithoutSubprops.put(first, new YieldInfo(first, yieldData.propType, yieldData.nonnullable));
-            } else {
-                existing.add(new YieldInfoTail(yieldData.name.subList(1, yieldData.name.size()), yieldData.propType, yieldData.nonnullable));
-            }
-        }
-
-        final Map<String, YieldInfoNode> result = new HashMap<>();
-
-        for (final Entry<String, List<YieldInfoTail>> yieldTree : yieldsTreeData.entrySet()) {
-            final YieldInfo yieldWithoutSubprops = yieldsWithoutSubprops.get(yieldTree.getKey());
-            result.put(yieldTree.getKey(), new YieldInfoNode(yieldTree.getKey(), yieldWithoutSubprops == null ? null : yieldWithoutSubprops.propType, yieldWithoutSubprops == null ? false : yieldWithoutSubprops.nonnullable, yieldTree.getValue().isEmpty() ? emptyMap() : group(yieldTree.getValue())));
-        }
-
-        return result;
+                    return new YieldInfoNode(firstName,
+                            optSimpleYield.map(y -> y.propType).orElse(null),
+                            optSimpleYield.map(y -> y.nonnullable).orElse(false),
+                            group(nonEmptyTails));
+                }
+        );
     }
 
-    private static record YieldAndConditions(Yield2 yield, Conditions2 conditions) {}
+    private record YieldAndConditions(Yield2 yield, Conditions2 conditions) {}
 
-    private static record YieldInfo(String name, PropType propType, boolean nonnullable) {}
+    private record YieldInfo(String name, PropType propType, boolean nonnullable) {}
 
-    private static record YieldInfoTail(List<String> name, PropType propType, boolean nonnullable) {}
+    private record YieldInfoTail(List<String> name, PropType propType, boolean nonnullable) {
+
+        String firstName() {
+            return name.getFirst();
+        }
+
+        boolean isEmpty() {
+            return name.isEmpty();
+        }
+
+        YieldInfoTail rest() {
+            return new YieldInfoTail(name.subList(1, name.size()), propType, nonnullable);
+        }
+
+    }
+
 }
